@@ -484,7 +484,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 
 			//if the locale has an variants e.g en_GB, try names in the locale excluding the country code i.e en
 			if (!StringUtils.isBlank(currentLocale.getCountry()) || !StringUtils.isBlank(currentLocale.getVariant())) {
-				Locale broaderLocale = new Locale(currentLocale.getLanguage());
+				Locale broaderLocale = Locale.of(currentLocale.getLanguage());
 				ConceptName prefNameInBroaderLoc = getPreferredName(broaderLocale);
 				if (prefNameInBroaderLoc != null) {
 					return prefNameInBroaderLoc;
@@ -573,7 +573,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 
 			// if we have any matches, we'll return one of them
 			if (matches.size() == 1) {
-				return matches.get(0);
+				return matches.getFirst();
 			} else if (matches.size() > 1) {
 				for (ConceptName match : matches) {
 					if (match.getLocalePreferred()) {
@@ -581,12 +581,12 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 					}
 				}
 				// none was explicitly marked as preferred
-				return matches.get(0);
+				return matches.getFirst();
 			}
 		}
 
 		// if we reach here, there were no matching names, so try to look in the parent locale
-		Locale parent = new Locale(locale.getLanguage());
+		Locale parent = Locale.of(locale.getLanguage());
 		if (!parent.equals(locale)) {
 			return getName(parent, ofType, havingTag);
 		} else {
@@ -622,7 +622,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 		}
 
 		if (!exact) {
-			Locale broaderLocale = new Locale(locale.getLanguage());
+			Locale broaderLocale = Locale.of(locale.getLanguage());
 			ConceptName name = getNameInLocale(broaderLocale);
 			return name != null ? name : getName();
 		}
@@ -1289,7 +1289,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 	 */
 	public Collection<ConceptName> getSynonyms(Locale locale) {
 
-		List<ConceptName> syns = new ArrayList<>();
+		var syns = new ArrayList<ConceptName>();
 		ConceptName preferredConceptName = null;
 		for (ConceptName possibleSynonymInLoc : getSynonyms()) {
 			if (locale.equals(possibleSynonymInLoc.getLocale())) {
@@ -1303,7 +1303,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 
 		// Add preferred name first in the list.
 		if (preferredConceptName != null) {
-			syns.add(0, preferredConceptName);
+			syns.addFirst(preferredConceptName);
 		}
 		log.debug("returning: " + syns);
 		return syns;
@@ -1430,11 +1430,11 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 	@Override
 	@Deprecated
 	public List<Concept> findPossibleValues(String searchText) {
-		List<Concept> concepts = new ArrayList<>();
+		var concepts = new ArrayList<Concept>();
 		try {
 
 			for (ConceptSearchResult searchResult : Context.getConceptService().getConcepts(searchText,
-			    Collections.singletonList(Context.getLocale()), false, null, null, null, null, null, null, null)) {
+			    List.of(Context.getLocale()), false, null, null, null, null, null, null, null)) {
 				concepts.add(searchResult.getConcept());
 			}
 		} catch (Exception e) {
@@ -1454,7 +1454,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 		} catch (Exception e) {
 			// pass
 		}
-		return Collections.emptyList();
+		return List.of();
 	}
 
 	/**
@@ -1513,7 +1513,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 			return null;
 		}
 
-		Set<Locale> locales = new HashSet<>();
+		var locales = new HashSet<Locale>();
 
 		for (ConceptName cn : getNames()) {
 			locales.add(cn.getLocale());
@@ -1546,7 +1546,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 	 * @return sortedConceptSet Collection&lt;ConceptSet&gt;
 	 */
 	private List<ConceptSet> getSortedConceptSets() {
-		List<ConceptSet> cs = new ArrayList<>();
+		var cs = new ArrayList<ConceptSet>();
 		if (conceptSets != null) {
 			cs.addAll(conceptSets);
 			Collections.sort(cs);
@@ -1567,7 +1567,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 	 * @return List&lt;Concept&gt; the Concepts that are members of this Concept's set
 	 */
 	public List<Concept> getSetMembers() {
-		List<Concept> conceptMembers = new ArrayList<>();
+		var conceptMembers = new ArrayList<Concept>();
 
 		Collection<ConceptSet> sortedConceptSet = getSortedConceptSets();
 
@@ -1645,7 +1645,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 			// deals with list size of 1 and any large index given by dev
 			weight = sortedConceptSets.get(setsSize - 1).getSortWeight() + 10.0;
 		} else if (index == 0) {
-			weight = sortedConceptSets.get(0).getSortWeight() - 10.0;
+			weight = sortedConceptSets.getFirst().getSortWeight() - 10.0;
 		} else {
 			// put the weight between two
 			double prevSortWeight = sortedConceptSets.get(index - 1).getSortWeight();
@@ -1653,7 +1653,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 			weight = (prevSortWeight + nextSortWeight) / 2;
 		}
 
-		ConceptSet conceptSet = new ConceptSet(setMember, weight);
+		var conceptSet = new ConceptSet(setMember, weight);
 		conceptSet.setConceptSet(this);
 		conceptSets.add(conceptSet);
 	}
