@@ -148,7 +148,7 @@ public class ConceptDAOTest extends BaseContextSensitiveTest {
 		List<Concept> conceptsByAnswer = dao.getConceptsByAnswer(concept);
 		assertNotNull(conceptsByAnswer);
 		assertEquals(1, conceptsByAnswer.size());
-		Concept conceptByAnswer = conceptsByAnswer.get(0);
+		Concept conceptByAnswer = conceptsByAnswer.getFirst();
 		assertEquals(21, conceptByAnswer.getConceptId().intValue());
 	}
 
@@ -166,15 +166,15 @@ public class ConceptDAOTest extends BaseContextSensitiveTest {
 		ConceptService cs = Context.getConceptService();
 		cs.updateConceptIndex(conceptWithMultipleMatchingNames);
 		cs.updateConceptIndex(dao.getConcept(4000));
-		List<ConceptSearchResult> searchResults = dao.getConcepts("trust", Collections.singletonList(Locale.ENGLISH), false,
+		List<ConceptSearchResult> searchResults = dao.getConcepts("trust", List.of(Locale.ENGLISH), false,
 		    Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, null, null,
 		    null);
 
 		assertEquals(2, searchResults.size());
 		//the first concept is the one with a word with the highest weight
-		assertEquals(conceptWithMultipleMatchingNames, searchResults.get(0).getConcept());
+		assertEquals(conceptWithMultipleMatchingNames, searchResults.getFirst().getConcept());
 		//For conceptId=3000, its search result should ALWAYS match on 'TRUST ME' because it is shorter THAN 'TRUST ALWAYS'
-		assertEquals(9998, searchResults.get(0).getConceptName().getConceptNameId().intValue());
+		assertEquals(9998, searchResults.getFirst().getConceptName().getConceptNameId().intValue());
 	}
 
 	/**
@@ -213,13 +213,12 @@ public class ConceptDAOTest extends BaseContextSensitiveTest {
 
 		updateSearchIndex();
 
-		List<ConceptSearchResult> searchResults1 = dao.getConcepts("one", Collections.singletonList(locale), false,
-		    Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, null, null,
-		    null);
+		List<ConceptSearchResult> searchResults1 = dao.getConcepts("one", List.of(locale), false, Collections.EMPTY_LIST,
+		    Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, null, null, null);
 
 		assertEquals(2, searchResults1.size());
-		assertEquals(c1, searchResults1.get(0).getConcept());
-		assertEquals(cn1b, searchResults1.get(0).getConceptName());
+		assertEquals(c1, searchResults1.getFirst().getConcept());
+		assertEquals(cn1b, searchResults1.getFirst().getConceptName());
 	}
 
 	/**
@@ -230,10 +229,10 @@ public class ConceptDAOTest extends BaseContextSensitiveTest {
 	public void getConcepts_shouldBeDiacriticInsensitive() {
 		executeDataSet("org/openmrs/api/include/ConceptServiceTest-accents.xml");
 		Context.getConceptService().updateConceptIndexes();
-		List<ConceptSearchResult> searchResults = dao.getConcepts("Hysterectom", Collections.singletonList(Locale.ENGLISH),
-		    false, Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, null,
-		    null, null);
+		List<ConceptSearchResult> searchResults = dao.getConcepts("Hysterectom", List.of(Locale.ENGLISH), false,
+		    Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, Collections.EMPTY_LIST, null, null,
+		    null);
 		assertEquals(4, searchResults.size());
-		assertEquals("Hystérectomie", searchResults.get(0).getConcept().getName().getName());
+		assertEquals("Hystérectomie", searchResults.getFirst().getConcept().getName().getName());
 	}
 }
