@@ -19,7 +19,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStreamWriter;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Scanner;
@@ -41,13 +41,19 @@ public abstract class AbstractSnapshotTuner {
 
 	private static final Logger log = LoggerFactory.getLogger(AbstractSnapshotTuner.class);
 
-	private static final String OPENMRS_LICENSE_HEADER = "<!--\n" + "\n"
-	        + "    This Source Code Form is subject to the terms of the Mozilla Public License,\n"
-	        + "    v. 2.0. If a copy of the MPL was not distributed with this file, You can\n"
-	        + "    obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under\n"
-	        + "    the terms of the Healthcare Disclaimer located at http://openmrs.org/license.\n" + "\n"
-	        + "    Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS\n"
-	        + "    graphic logo is a trademark of OpenMRS Inc.\n" + "\n" + "-->\n";
+	private static final String OPENMRS_LICENSE_HEADER = """
+	        <!--
+
+	            This Source Code Form is subject to the terms of the Mozilla Public License,
+	            v. 2.0. If a copy of the MPL was not distributed with this file, You can
+	            obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
+	            the terms of the Healthcare Disclaimer located at http://openmrs.org/license.
+
+	            Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
+	            graphic logo is a trademark of OpenMRS Inc.
+
+	        -->
+	        """;
 
 	private static final String OPENMRS_LICENSE_SNIPPET = "the terms of the Healthcare Disclaimer located at http://openmrs.org/license";
 
@@ -85,7 +91,7 @@ public abstract class AbstractSnapshotTuner {
 	}
 
 	String addLicenseHeaderToFileContent(String path) throws FileNotFoundException {
-		StringBuilder buffer = new StringBuilder();
+		var buffer = new StringBuilder();
 
 		try (Scanner scanner = new Scanner(new File(path))) {
 			// read first line of xml file
@@ -109,7 +115,7 @@ public abstract class AbstractSnapshotTuner {
 	}
 
 	void deleteFile(String path) {
-		File file = Paths.get(path).toFile();
+		var file = Path.of(path).toFile();
 		if (file.exists() && file.isFile()) {
 			log.info("Deleting updated file from previous run: '{}'...", path);
 			file.delete();
@@ -131,14 +137,14 @@ public abstract class AbstractSnapshotTuner {
 	}
 
 	static Document readChangeLogFile(String path) throws DocumentException, SAXException {
-		File file = Paths.get(path).toFile();
+		var file = Path.of(path).toFile();
 		if (!file.exists()) {
 			log.error("The source file '{}' does not exist. Please generate both Liquibase changelog files and retry. "
 			        + "Please check if you are running this program from the 'openmrs-core/liquibase' folder.",
 			    path);
 			System.exit(0);
 		}
-		SAXReader reader = new SAXReader();
+		var reader = new SAXReader();
 		reader.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
 		reader.setFeature("http://xml.org/sax/features/external-general-entities", false);
 		reader.setFeature("http://xml.org/sax/features/external-parameter-entities", false);
@@ -169,7 +175,7 @@ public abstract class AbstractSnapshotTuner {
 
 	static String readInputStream(InputStream is) throws IOException {
 		// this may over-allocate, but we're only holding it in memory temporarily
-		ByteArrayOutputStream outputStream = new ByteArrayOutputStream(8192);
+		var outputStream = new ByteArrayOutputStream(8192);
 		byte[] buffer = new byte[8192];
 		int length;
 		while ((length = is.read(buffer)) != -1) {
@@ -192,8 +198,8 @@ public abstract class AbstractSnapshotTuner {
 	void writeChangeLogFile(Document document, String path) throws IOException {
 		XMLWriter xmlWriter = null;
 		try {
-			try (OutputStreamWriter out = new OutputStreamWriter(new FileOutputStream(path), StandardCharsets.UTF_8);) {
-				OutputFormat format = OutputFormat.createPrettyPrint();
+			try (var out = new OutputStreamWriter(new FileOutputStream(path), StandardCharsets.UTF_8)) {
+				var format = OutputFormat.createPrettyPrint();
 				xmlWriter = new XMLWriter(out, format);
 				xmlWriter.write(document);
 			}
@@ -212,7 +218,7 @@ public abstract class AbstractSnapshotTuner {
 	}
 
 	void writeFile(String content, String path) throws IOException {
-		File file = Paths.get(path).toFile();
+		var file = Path.of(path).toFile();
 		try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
 			writer.write(content);
 		} catch (IOException e) {
