@@ -12,9 +12,7 @@ package org.openmrs.liquibase;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -37,14 +35,14 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class CoreDataTunerTest {
 
-	private static final String LIQUIBASE_CORE_DATA_SNAPSHOT_XML = Paths
-	        .get("org", "openmrs", "liquibase", "snapshots", "core-data", "liquibase-core-data-SNAPSHOT.xml").toString();
+	private static final String LIQUIBASE_CORE_DATA_SNAPSHOT_XML = Path
+	        .of("org", "openmrs", "liquibase", "snapshots", "core-data", "liquibase-core-data-SNAPSHOT.xml").toString();
 
-	private static final String LIQUIBASE_CORE_DATA_UPDATED_SNAPSHOT_XML = Paths
-	        .get("org", "openmrs", "liquibase", "snapshots", "core-data", "liquibase-core-data-UPDATED-SNAPSHOT.xml")
+	private static final String LIQUIBASE_CORE_DATA_UPDATED_SNAPSHOT_XML = Path
+	        .of("org", "openmrs", "liquibase", "snapshots", "core-data", "liquibase-core-data-UPDATED-SNAPSHOT.xml")
 	        .toString();
 
-	private static String PATH_TO_TEST_RESOURCES = Paths.get("src", "test", "resources").toString();
+	private static String PATH_TO_TEST_RESOURCES = Path.of("src", "test", "resources").toString();
 
 	public static final int TWENTY_FIVE = 25;
 
@@ -135,11 +133,11 @@ public class CoreDataTunerTest {
 
 	@Test
 	public void shouldMergeTableNamesInTargetOrder() {
-		List<String> first = Arrays.asList("one", "five");
-		List<String> second = Arrays.asList("one", "two", "three", "four", "five");
+		List<String> first = List.of("one", "five");
+		List<String> second = List.of("one", "two", "three", "four", "five");
 
 		List<String> actual = mergeLists(first, second);
-		List<String> expected = Arrays.asList("one", "five", "two", "three", "four");
+		List<String> expected = List.of("one", "five", "two", "three", "four");
 
 		assertEquals(expected, actual);
 	}
@@ -147,8 +145,8 @@ public class CoreDataTunerTest {
 	@Test
 	public void shouldDetectThatSecondListDoesNotContainFirstList() {
 		assertThrows(AssertionError.class, () -> {
-			List<String> first = Arrays.asList("one", "six");
-			List<String> second = Arrays.asList("one", "two", "three", "four", "five");
+			List<String> first = List.of("one", "six");
+			List<String> second = List.of("one", "two", "three", "four", "five");
 
 			List<String> actual = mergeLists(first, second);
 		});
@@ -172,11 +170,11 @@ public class CoreDataTunerTest {
 
 	@Test
 	public void shouldGetTableNames() {
-		List<String> expected = Arrays.asList("care_setting", "concept", "concept_class", "concept_datatype",
-		    "concept_map_type", "concept_name", "concept_stop_word", "encounter_role", "field_type", "global_property",
-		    "hl7_source", "liquibasechangelog", "liquibasechangeloglock", "location", "order_type",
-		    "patient_identifier_type", "person", "person_attribute_type", "person_name", "privilege", "relationship_type",
-		    "role", "role_privilege", "scheduler_task_config", "user_property", "user_role", "users");
+		List<String> expected = List.of("care_setting", "concept", "concept_class", "concept_datatype", "concept_map_type",
+		    "concept_name", "concept_stop_word", "encounter_role", "field_type", "global_property", "hl7_source",
+		    "liquibasechangelog", "liquibasechangeloglock", "location", "order_type", "patient_identifier_type", "person",
+		    "person_attribute_type", "person_name", "privilege", "relationship_type", "role", "role_privilege",
+		    "scheduler_task_config", "user_property", "user_role", "users");
 
 		List<String> actual = getTableNames(document);
 
